<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="android.nickrom.lab4.MainActivity"
    android:weightSum="1">

    <TextView
        android:id="@+id/cameraView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/photo"/>
    <TextView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/map"/>
    <TextView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/web"/>
    <TextView
        android:id="@+id/contactListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/contacts"/>
</LinearLayout>
